corrected the covid dose visibility, add the Santa Clara Family Health Plan(SCFHP) to the health insurance health plan radios, extended therr text area for listed questions and made a few adjustments to the styling

--- a/css/styles.css
+++ b/css/styles.css
@@ -117,10 +117,18 @@ input{
 input[type=radio]:hover, input[type=checkbox]:hover {
     cursor: pointer;
 }
-input[type=radio], input[type=checkbox]{
+input[type=checkbox]{
     width: 15px;
     height: 1.2em;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+input[type=radio]{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+input[type=text], input[type=email], input[type=tel], input[type=password], input[type=date]{
+    border-radius: .2em;
+    text-indent: .5em;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
 .question{
     background-color: #f5e2c8;
@@ -186,6 +194,14 @@ li label {
 label{
     font-size: 17px;
 }
+/*styleing for questions that ask user to list things*/
+.listOut{
+    width: 31em;
+    height: 3em;
+    top: 0;
+    right: 0;
+}
+
 /*styles for buttons*/
 button{
     width: 140px;
@@ -203,6 +219,8 @@ button{
     margin: 0 30px;
     background-color: #0f7235;
     color: #ffff;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+
 }
 .btn:hover{
     border: none;
@@ -216,7 +234,7 @@ button{
     position: absolute;
     bottom: 0;
     right: .5em;
-    box-shadow: .1em .1em .2em #54595f;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 
 }
 #addEBtn:hover{
